feat: add watchdog for file changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -50,5 +50,6 @@ typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.1
 urllib3==2.3.0
+watchdog==6.0.0
 yarl==1.18.3
 zstandard==0.23.0
